--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -24,90 +25,79 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp" />
 
-    <RadioButton
-        android:id="@+id/radioButton16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:layout_marginStart="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/radioButton15"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="Lights（晚）"
-        app:layout_constraintBottom_toTopOf="@+id/radioButton16"
+        app:layout_constraintBottom_toBottomOf="@+id/radioButton7"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioButton14" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Lights(午）"
+        android:text="Lights(午）    "
         app:layout_constraintBottom_toTopOf="@+id/radioButton15"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioButton13" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Hot pot(晚)"
+        android:text="Hot pot(晚)   "
         app:layout_constraintBottom_toTopOf="@+id/radioButton14"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioButton12" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Hot pot(午)"
+        android:text="Hot pot(午)   "
         app:layout_constraintBottom_toTopOf="@+id/radioButton13"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioButton11" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Hot pot(早)"
+        android:text="Hot pot(早)   "
         app:layout_constraintBottom_toTopOf="@+id/radioButton12"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioButton10" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="TV.Fan(晚)"
+        android:text="TV.Fan(晚)    "
         app:layout_constraintBottom_toTopOf="@+id/radioButton11"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/radioButton9" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
-        android:text="TV.Fan(午）"
+        android:text="TV.Fan(午） "
         app:layout_constraintBottom_toTopOf="@+id/radioButton10"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_chainStyle="spread_inside" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -119,37 +109,37 @@
         app:layout_constraintTop_toBottomOf="@+id/radioButton7"
         app:layout_constraintVertical_bias="1.0" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Dehumidifier"
+        android:text="Dehumidifier       "
         app:layout_constraintBottom_toTopOf="@+id/radioButton8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton6" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Refrigerator"
+        android:text="Refrigerator         "
         app:layout_constraintBottom_toTopOf="@+id/radioButton7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Air condition(晚)"
+        android:text="Air condition(晚) "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton4"
         app:layout_constraintBottom_toTopOf="@+id/radioButton6"/>
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -159,37 +149,67 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Air condition(早)"
+        android:text="Air condition(早) "
         app:layout_constraintBottom_toTopOf="@+id/radioButton4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton2" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Electric pot(晚)"
+        android:text="Electric pot(晚)   "
         app:layout_constraintBottom_toTopOf="@+id/radioButton3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton1" />
 
-    <RadioButton
+    <Switch
         android:id="@+id/radioButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:editable="true"
-        android:text="Electric pot(午)"
+        android:text="Electric pot(午)   "
         app:layout_constraintBottom_toTopOf="@+id/radioButton2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_chainStyle="spread_inside" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_green_light"
+        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
+        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
+        app:layout_constraintTop_toTopOf="@+id/floatingActionButton"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:drawable/presence_online" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@+id/radioButton8"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/radioButton8"
+        app:srcCompat="@android:drawable/ic_notification_clear_all" /><![CDATA[
+
+
+    "/>
+
+
+]]>
 </android.support.constraint.ConstraintLayout>
